Finish generating relaxed library, run through ML pipeline

--- a/esmdance_fine-tuning_on_yeast_data.ipynb
+++ b/esmdance_fine-tuning_on_yeast_data.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "52e0b76e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3aeef79c",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "[3960 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b58e0e19",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "845b69af",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a817a1df",
    "metadata": {},
    "outputs": [
@@ -621,15 +621,15 @@
       "[Training]:   0%|          | 0/223 [00:00<?, ?it/s]Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n",
       "/home/oscar/miniconda3/envs/ml/lib/python3.11/site-packages/torch/nn/functional.py:5962: UserWarning: Support for mismatched key_padding_mask and attn_mask is deprecated. Use same type for both instead.\n",
       "  warnings.warn(\n",
-      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 10.64it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.95it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:51<00:00,  4.34it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:03<00:00,  6.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1863 | Validation Loss: 0.1431 | Spearman Correlation: 0.6745\n",
+      "Training Loss: 0.1883 | Validation Loss: 0.1402 | Spearman Correlation: 0.6600\n",
       "\n",
       "Epoch 2/5\n",
       "----------------------------\n"
@@ -639,15 +639,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 11.14it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.82it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:49<00:00,  4.52it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:03<00:00,  6.41it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1392 | Validation Loss: 0.1621 | Spearman Correlation: 0.7070\n",
+      "Training Loss: 0.1297 | Validation Loss: 0.1057 | Spearman Correlation: 0.7073\n",
       "\n",
       "Epoch 3/5\n",
       "----------------------------\n"
@@ -657,15 +657,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 11.00it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.71it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:48<00:00,  4.61it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:03<00:00,  6.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1107 | Validation Loss: 0.1061 | Spearman Correlation: 0.7311\n",
+      "Training Loss: 0.1132 | Validation Loss: 0.1033 | Spearman Correlation: 0.7410\n",
       "\n",
       "Epoch 4/5\n",
       "----------------------------\n"
@@ -675,15 +675,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:23<00:00,  9.57it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.39it/s]\n"
+      "[Training]: 100%|██████████| 223/223 [00:23<00:00,  9.69it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 17.63it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1023 | Validation Loss: 0.0987 | Spearman Correlation: 0.7443\n",
+      "Training Loss: 0.1009 | Validation Loss: 0.0864 | Spearman Correlation: 0.7583\n",
       "\n",
       "Epoch 5/5\n",
       "----------------------------\n"
@@ -693,15 +693,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 10.99it/s]\n",
-      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 15.57it/s]"
+      "[Training]: 100%|██████████| 223/223 [00:20<00:00, 10.82it/s]\n",
+      "[Validation]: 100%|██████████| 25/25 [00:01<00:00, 17.20it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Loss: 0.1017 | Validation Loss: 0.0964 | Spearman Correlation: 0.7496\n"
+      "Training Loss: 0.0971 | Validation Loss: 0.0861 | Spearman Correlation: 0.7762\n"
      ]
     },
     {
@@ -830,7 +830,7 @@
     "print(f\"Using device: {device}\")\n",
     "\n",
     "# --- MODEL INITIALIZATION ---\n",
-    "nma_model_path = 'models/esmdance-mutant-nma-fine-tuned/esmdance_fine-tuned_with_nma_data.pth'\n",
+    "nma_model_path = 'models/esmdance-mutant-nma-fine-tuned_relaxed/esmdance_fine-tuned_with_nma_data.pth'\n",
     "\n",
     "# The new model initialization is now much cleaner\n",
     "model = NMAFineTuningForBinding(\n",
@@ -906,10 +906,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55583f2f",
+   "id": "762161ff",
    "metadata": {},
    "source": [
-    "At least to this extent, fine-tuning did not seem to have a measurable impact."
+    "Without relax (5 epochs): Validation Loss: 0.0964 | Spearman Correlation: 0.7496"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9d01f60",
+   "metadata": {},
+   "source": [
+    "With relax (5 epochs): Validation loss: 0.0861 | Spearman correlation: 0.7762"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a18f3a",
+   "metadata": {},
+   "source": [
+    "Compared to the most similar baseline, trainable ESMDance without pooling (Validation Loss: 0.0957 | Spearman Correlation: 0.7465), the model fine-tuned on relaxed structures does a little bit better, at least on this run (pending replicates with different seeds). It also does slightly better than training the full 8M ESM2 (Validation Loss: 0.0859 | Spearman Correlation: 0.7586) and 35M ESM2 with two layers unfrozen (Validation Loss: 0.1062 | Spearman Correlation: 0.7602)."
    ]
   },
   {
